--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
-openai
-pytrends
-gtts
-google-api-python-client
-google-auth
-google-auth-oauthlib
-python-dotenv
+# 수정 완료 버전 (2025-04-12 검증)
+openai==1.3.6
+requests==2.31.0
+pillow==10.2.0
+pytrends==4.9.2
+moviepy==1.0.3  # 1.0.4 → 1.0.3으로 변경
+python-dotenv==1.0.0
+google-api-python-client==2.104.0
+google-auth==2.23.4
+google-auth-oauthlib==1.2.0
+google-auth-httplib2==0.1.1
+imageio==2.33.0
+imageio-ffmpeg==0.4.9
 
