--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -3,37 +3,36 @@ name: Auto YouTube Upload
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 3 * * *'  # 매일 한국 시간 12:00 PM 실행
+    - cron: '0 3 * * *'  # 매일 한국 시간 12시 실행
 
 jobs:
   upload:
     runs-on: ubuntu-latest
-    timeout-minutes: 45  # 타임아웃 설정
+    timeout-minutes: 60
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4  # 최신 버전 사용
 
-    - name: Set up Python 3.12
-      uses: actions/setup-python@v4
+    - name: Setup Python
+      uses: actions/setup-python@v5
       with:
         python-version: '3.12'
 
     - name: Install system dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y ffmpeg  # moviepy 필수 패키지
+        sudo apt-get install -y ffmpeg
 
-    - name: Install Python dependencies
-      run: |
-        pip install --upgrade pip
-        pip install -r requirements.txt
+    - name: Install Python packages
+      run: pip install -r requirements.txt
 
     - name: Create static directory
-      run: mkdir -p static  # 필수 디렉토리 생성
+      run: mkdir -p static
 
     - name: Run Main Script
       env:
+        # OpenAI API Keys (GitHub Secrets에 등록된 이름과 정확히 일치)
         OPENAI_API_KEY_1: ${{ secrets.OPENAI_API_KEY_1 }}
         OPENAI_API_KEY_2: ${{ secrets.OPENAI_API_KEY_2 }}
         OPENAI_API_KEY_3: ${{ secrets.OPENAI_API_KEY_3 }}
@@ -44,8 +43,8 @@ jobs:
         OPENAI_API_KEY_8: ${{ secrets.OPENAI_API_KEY_8 }}
         OPENAI_API_KEY_9: ${{ secrets.OPENAI_API_KEY_9 }}
         OPENAI_API_KEY_10: ${{ secrets.OPENAI_API_KEY_10 }}
-        GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
-        GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
-        GOOGLE_REFRESH_TOKEN: ${{ secrets.GOOGLE_REFRESH_TOKEN }}
-      run: |
-        python secure_main.py
+        # Google API Keys
+        GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}          # 주의: Secrets 이름 변경!
+        GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}  # 주의: Secrets 이름 변경!
+        GOOGLE_REFRESH_TOKEN: ${{ secrets.GOOGLE_REFRESH_TOKEN }}  # 주의: Secrets 이름 변경!
+      run: python secure_main.py
