--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -1,50 +1,48 @@
-name: Auto YouTube Upload
+name: Upload YouTube Video
 
 on:
-  workflow_dispatch:
   schedule:
-    - cron: '0 3 * * *'  # 매일 한국 시간 12시 실행
+    - cron: '0 * * * *'  # 매 시간마다 실행
+  workflow_dispatch:
 
 jobs:
-  upload:
+  run-bot:
     runs-on: ubuntu-latest
-    timeout-minutes: 60
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
-    - name: Setup Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.12'
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-    - name: Install system dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y ffmpeg
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install openai google-api-python-client pytrends elevenlabs
 
-    - name: Install Python packages
-      run: pip install -r requirements.txt
+      - name: Install FFmpeg & ImageMagick
+        run: |
+          sudo apt-get update
+          sudo apt-get install ffmpeg imagemagick -y
 
-    - name: Create static directory
-      run: mkdir -p static
+      - name: Run Script
+        env:
+          OPENAI_API_KEY_1: ${{ secrets.OPENAI_API_KEY_1 }}
+          OPENAI_API_KEY_2: ${{ secrets.OPENAI_API_KEY_2 }}
+          OPENAI_API_KEY_3: ${{ secrets.OPENAI_API_KEY_3 }}
+          OPENAI_API_KEY_4: ${{ secrets.OPENAI_API_KEY_4 }}
+          OPENAI_API_KEY_5: ${{ secrets.OPENAI_API_KEY_5 }}
+          OPENAI_API_KEY_6: ${{ secrets.OPENAI_API_KEY_6 }}
+          OPENAI_API_KEY_7: ${{ secrets.OPENAI_API_KEY_7 }}
+          OPENAI_API_KEY_8: ${{ secrets.OPENAI_API_KEY_8 }}
+          OPENAI_API_KEY_9: ${{ secrets.OPENAI_API_KEY_9 }}
+          OPENAI_API_KEY_10: ${{ secrets.OPENAI_API_KEY_10 }}
+          ELEVENLABS_KEY: ${{ secrets.ELEVENLABS_KEY }}
+          ELEVENLABS_VOICE_ID: ${{ secrets.ELEVENLABS_VOICE_ID }}
+          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+          GOOGLE_REFRESH_TOKEN: ${{ secrets.GOOGLE_REFRESH_TOKEN }}
+        run: python secure_main.py
 
-    - name: Run Main Script
-      env:
-        # OpenAI API Keys
-        OPENAI_API_KEY_1: ${{ secrets.OPENAI_API_KEY_1 }}
-        OPENAI_API_KEY_2: ${{ secrets.OPENAI_API_KEY_2 }}
-        OPENAI_API_KEY_3: ${{ secrets.OPENAI_API_KEY_3 }}
-        OPENAI_API_KEY_4: ${{ secrets.OPENAI_API_KEY_4 }}
-        OPENAI_API_KEY_5: ${{ secrets.OPENAI_API_KEY_5 }}
-        OPENAI_API_KEY_6: ${{ secrets.OPENAI_API_KEY_6 }}
-        OPENAI_API_KEY_7: ${{ secrets.OPENAI_API_KEY_7 }}
-        OPENAI_API_KEY_8: ${{ secrets.OPENAI_API_KEY_8 }}
-        OPENAI_API_KEY_9: ${{ secrets.OPENAI_API_KEY_9 }}
-        OPENAI_API_KEY_10: ${{ secrets.OPENAI_API_KEY_10 }}
-        # Google API Keys
-        GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
-        GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
-        GOOGLE_REFRESH_TOKEN: ${{ secrets.GOOGLE_REFRESH_TOKEN }}
-      run: python secure_main.py
