--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -1,48 +1,37 @@
-name: Upload YouTube Video
+name: YouTube Auto Upload
 
 on:
-  schedule:
-    - cron: '0 * * * *'  # 매 시간마다 실행
   workflow_dispatch:
+  schedule:
+    - cron: '0 4 * * *'  # 한국 시간 오후 1시 (UTC 4시)
 
 jobs:
-  run-bot:
+  run-script:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: '3.12'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install openai google-api-python-client pytrends elevenlabs
+          pip install -r requirements.txt
 
-      - name: Install FFmpeg & ImageMagick
+      - name: Set environment variables
         run: |
-          sudo apt-get update
-          sudo apt-get install ffmpeg imagemagick -y
+          echo "ELEVENLABS_KEY=${{ secrets.ELEVENLABS_KEY }}" >> $GITHUB_ENV
+          echo "ELEVENLABS_VOICE_ID=${{ secrets.ELEVENLABS_VOICE_ID }}" >> $GITHUB_ENV
+          echo "GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}" >> $GITHUB_ENV
+          echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" >> $GITHUB_ENV
+          echo "GOOGLE_REFRESH_TOKEN=${{ secrets.GOOGLE_REFRESH_TOKEN }}" >> $GITHUB_ENV
+          echo "OPENAI_API_KEY_1=${{ secrets.OPENAI_API_KEY_1 }}" >> $GITHUB_ENV
 
-      - name: Run Script
-        env:
-          OPENAI_API_KEY_1: ${{ secrets.OPENAI_API_KEY_1 }}
-          OPENAI_API_KEY_2: ${{ secrets.OPENAI_API_KEY_2 }}
-          OPENAI_API_KEY_3: ${{ secrets.OPENAI_API_KEY_3 }}
-          OPENAI_API_KEY_4: ${{ secrets.OPENAI_API_KEY_4 }}
-          OPENAI_API_KEY_5: ${{ secrets.OPENAI_API_KEY_5 }}
-          OPENAI_API_KEY_6: ${{ secrets.OPENAI_API_KEY_6 }}
-          OPENAI_API_KEY_7: ${{ secrets.OPENAI_API_KEY_7 }}
-          OPENAI_API_KEY_8: ${{ secrets.OPENAI_API_KEY_8 }}
-          OPENAI_API_KEY_9: ${{ secrets.OPENAI_API_KEY_9 }}
-          OPENAI_API_KEY_10: ${{ secrets.OPENAI_API_KEY_10 }}
-          ELEVENLABS_KEY: ${{ secrets.ELEVENLABS_KEY }}
-          ELEVENLABS_VOICE_ID: ${{ secrets.ELEVENLABS_VOICE_ID }}
-          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
-          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
-          GOOGLE_REFRESH_TOKEN: ${{ secrets.GOOGLE_REFRESH_TOKEN }}
+      - name: Run secure_main.py
         run: python secure_main.py
 
