--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -1,7 +1,7 @@
 name: YouTube Auto Upload
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:  # 수동 실행을 위한 트리거
   schedule:
     - cron: '0 4 * * *'  # 한국 시간 오후 1시 (UTC 4시)
 
