--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 openai==1.12.0
 requests==2.31.0
 pillow==10.2.0
-pytrends==4.9.2  # 5.0.0 → 4.9.2로 변경 (실제 존재하는 버전)
+pytrends==4.9.2
 moviepy==1.0.3
 python-dotenv==1.0.0
 google-api-python-client==2.104.0
@@ -10,3 +10,4 @@ google-auth-oauthlib==1.2.0
 google-auth-httplib2==0.1.1
 imageio==2.33.0
 imageio-ffmpeg==0.4.9
+
