--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -1,38 +1,47 @@
-name: YouTube Auto Upload
+name: Auto YouTube Upload
 
 on:
-  workflow_dispatch:  # 수동 실행
   schedule:
-    - cron: '0 4 * * *'  # 매일 오후 1시 (KST)
+    - cron: '0 9 * * *'  # 매일 오전 9시 KST (UTC 기준 0시)
+  workflow_dispatch:
 
 jobs:
-  run-script:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - name: 저장소 체크아웃
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
+    - name: Python 설정
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+    - name: 의존성 설치
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-      - name: Set environment variables
-        run: |
-          echo "ELEVENLABS_KEY=${{ secrets.ELEVENLABS_KEY }}" >> $GITHUB_ENV
-          echo "ELEVENLABS_VOICE_ID=${{ secrets.ELEVENLABS_VOICE_ID }}" >> $GITHUB_ENV
-          echo "GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}" >> $GITHUB_ENV
-          echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" >> $GITHUB_ENV
-          echo "GOOGLE_REFRESH_TOKEN=${{ secrets.GOOGLE_REFRESH_TOKEN }}" >> $GITHUB_ENV
-          echo "OPENAI_API_KEY_1=${{ secrets.OPENAI_API_KEY_1 }}" >> $GITHUB_ENV
-          echo "OPENAI_API_KEY_2=${{ secrets.OPENAI_API_KEY_2 }}" >> $GITHUB_ENV
+    - name: .env 설정
+      run: |
+        echo "ELEVENLABS_KEY=${{ secrets.ELEVENLABS_KEY }}" >> .env
+        echo "ELEVENLABS_VOICE_ID=${{ secrets.ELEVENLABS_VOICE_ID }}" >> .env
+        echo "GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}" >> .env
+        echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" >> .env
+        echo "GOOGLE_REFRESH_TOKEN=${{ secrets.GOOGLE_REFRESH_TOKEN }}" >> .env
+        echo "GOOGLE_CLIENT_SECRET_JSON=${{ secrets.GOOGLE_CLIENT_SECRET_JSON }}" >> .env
+        echo "OPENAI_API_KEY_1=${{ secrets.OPENAI_API_KEY_1 }}" >> .env
+        echo "OPENAI_API_KEY_2=${{ secrets.OPENAI_API_KEY_2 }}" >> .env
+        echo "OPENAI_API_KEY_3=${{ secrets.OPENAI_API_KEY_3 }}" >> .env
+        echo "OPENAI_API_KEY_4=${{ secrets.OPENAI_API_KEY_4 }}" >> .env
+        echo "OPENAI_API_KEY_5=${{ secrets.OPENAI_API_KEY_5 }}" >> .env
+        echo "OPENAI_API_KEY_6=${{ secrets.OPENAI_API_KEY_6 }}" >> .env
+        echo "OPENAI_API_KEY_7=${{ secrets.OPENAI_API_KEY_7 }}" >> .env
+        echo "OPENAI_API_KEY_8=${{ secrets.OPENAI_API_KEY_8 }}" >> .env
+        echo "OPENAI_API_KEY_9=${{ secrets.OPENAI_API_KEY_9 }}" >> .env
+        echo "OPENAI_API_KEY_10=${{ secrets.OPENAI_API_KEY_10 }}" >> .env
 
-      - name: Run secure_main.py
-        run: python secure_main.py
+    - name: 자동 실행
+      run: python secure_main.py
 
