--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,7 @@
-openai==1.12.0
-requests==2.31.0
-pillow==10.2.0
-pytrends==4.9.2
-moviepy==1.0.3
-python-dotenv==1.0.0
-google-api-python-client==2.104.0
-google-auth==2.23.4
-google-auth-oauthlib==1.2.0
-google-auth-httplib2==0.1.1
-imageio==2.33.0
-imageio-ffmpeg==0.4.9
-
+python-dotenv
+moviepy
+google-api-python-client
+oauth2client
+openai
+pytrends
+elevenlabs
