--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -42,6 +42,7 @@ jobs:
         echo "OPENAI_API_KEY_9=${{ secrets.OPENAI_API_KEY_9 }}" >> .env
         echo "OPENAI_API_KEY_10=${{ secrets.OPENAI_API_KEY_10 }}" >> .env
 
-    - name: 자동 실행
-      run: python secure_main.py
+    - name: Python 스크립트 실행
+      run: |
+        python secure_main.py
 
