--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -1,31 +1,46 @@
-name: YouTube Automation
+name: YouTube Automation Pipeline
 
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    # 매일 오전 9시와 오후 9시에 실행 (UTC 기준)
+    - cron: '0 9,21 * * *'
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: '3.10'
 
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
-          
+          sudo apt-get install -y ffmpeg
+          sudo apt-get install -y fonts-dejavu
+
       - name: Create .env file with secrets
         run: |
           echo "GOOGLE_CLIENT_SECRET_JSON=${{ secrets.GOOGLE_CLIENT_SECRET_JSON }}" >> .env
+          echo "ELEVENLABS_API_KEY=${{ secrets.ELEVENLABS_API_KEY }}" >> .env
           echo "ELEVENLABS_VOICE_ID=${{ secrets.ELEVENLABS_VOICE_ID }}" >> .env
-          
+          echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> .env
+
       - name: Run the script
         run: python secure_main.py
 
+      - name: Upload generated files as artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: generated-content
+          path: |
+            generated_audio_*.mp3
+            generated_videos/*.mp4
+            generated_thumbnails/*.jpg
+            *.log
