--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-python-dotenv
-moviepy
-google-api-python-client
-oauth2client
-openai
-pytrends
-elevenlabs
-requests
-ffmpeg-python
-
+python-dotenv==1.0.0
+moviepy==2.0.0.dev2
+google-api-python-client==2.104.0
+oauth2client==4.1.3
+openai==1.12.0
+pytrends==4.9.2
+elevenlabs==0.2.12
+requests==2.31.0
+ffmpeg-python==0.2.0
+Pillow==10.1.0
+numpy==1.26.3
+tqdm==4.66.1
