--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -2,45 +2,63 @@ name: YouTube Automation Pipeline
 
 on:
   schedule:
-    # 매일 오전 9시와 오후 9시에 실행 (UTC 기준)
-    - cron: '0 9,21 * * *'
-  workflow_dispatch:
+    # 매일 2회 실행 (예: 오전 9시, 오후 9시 KST = UTC 0시, 12시)
+    # 시간을 조정하여 API 할당량 고려 (예: 하루 1~2회)
+    - cron: '0 0,12 * * *'
+  workflow_dispatch: # 수동 실행 가능
 
 jobs:
-  build:
+  build-and-upload:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4 # 최신 버전 사용
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5 # 최신 버전 사용
         with:
-          python-version: '3.10'
+          python-version: '3.10' # requirements.txt와 호환되는 버전 명시
 
-      - name: Install dependencies
+      - name: Install system dependencies (ffmpeg, fonts)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ffmpeg fonts-dejavu
+
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          sudo apt-get install -y ffmpeg
-          sudo apt-get install -y fonts-dejavu
 
-      - name: Create .env file with secrets
-        run: |
-          echo "GOOGLE_CLIENT_SECRET_JSON=${{ secrets.GOOGLE_CLIENT_SECRET_JSON }}" >> .env
-          echo "ELEVENLABS_API_KEY=${{ secrets.ELEVENLABS_API_KEY }}" >> .env
-          echo "ELEVENLABS_VOICE_ID=${{ secrets.ELEVENLABS_VOICE_ID }}" >> .env
-          echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> .env
+      - name: Run YouTube Automation Script
+        # GitHub Secrets를 환경 변수로 직접 주입
+        env:
+          # GOOGLE_CLIENT_SECRET_JSON: 전체 JSON 내용을 Secret에 저장
+          GOOGLE_CLIENT_SECRET_JSON: ${{ secrets.GOOGLE_CLIENT_SECRET_JSON }}
+          # GOOGLE_TOKEN_JSON: 로컬에서 인증 후 생성된 token.json 내용을 Secret에 저장 (선택적, 자동 갱신 시 필요)
+          GOOGLE_TOKEN_JSON: ${{ secrets.GOOGLE_TOKEN_JSON }} # 이 Secret이 없으면 최초 실행 시 인증 필요 (Actions에서는 불가)
+          ELEVENLABS_API_KEY: ${{ secrets.ELEVENLABS_API_KEY }}
+          ELEVENLABS_VOICE_ID: ${{ secrets.ELEVENLABS_VOICE_ID }}
+          # OpenAI API 키 (여러 개 로테이션)
+          OPENAI_API_KEY_1: ${{ secrets.OPENAI_API_KEY_1 }}
+          OPENAI_API_KEY_2: ${{ secrets.OPENAI_API_KEY_2 }}
+          OPENAI_API_KEY_3: ${{ secrets.OPENAI_API_KEY_3 }}
+          # ... 필요한 만큼 추가 ...
+          OPENAI_API_KEY_10: ${{ secrets.OPENAI_API_KEY_10 }}
+          # TREND_KEYWORDS: ${{ secrets.TREND_KEYWORDS }} # 트렌드 키워드 Secret 사용 시
 
-      - name: Run the script
-        run: python secure_main.py
+        run: python secure_main.py # 메인 스크립트 실행
 
-      - name: Upload generated files as artifacts
-        uses: actions/upload-artifact@v3
+      - name: Upload logs and artifacts (optional)
+        # 실패 시 로그 확인을 위해 업로드, 성공 시에는 불필요할 수 있음
+        if: failure() # 실패했을 때만 아티팩트 업로드
+        uses: actions/upload-artifact@v4 # 최신 버전 사용
         with:
-          name: generated-content
+          name: failure-logs-and-outputs
           path: |
-            generated_audio_*.mp3
-            generated_videos/*.mp4
-            generated_thumbnails/*.jpg
-            *.log
+            .secure_log.txt
+            *.log # 다른 로그 파일들
+            generated_audio/ # 생성된 오디오 (디버깅용)
+            generated_videos/ # 생성된 비디오 (디버깅용)
+            generated_thumbnails/ # 생성된 썸네일 (디버깅용)
+            token.json # 생성된 토큰 (디버깅용)
+          retention-days: 5 # 5일간 보관
