--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
-python-dotenv==1.0.0
-moviepy==2.0.0.dev2
-google-api-python-client==2.104.0
-oauth2client==4.1.3
-openai==1.12.0
+python-dotenv==1.0.1 # 버전 명시성 향상
+moviepy==1.0.3 # 안정 버전 사용 고려 (dev 버전 대신)
+google-api-python-client==2.126.0 # 최신 버전으로 업데이트
+google-auth-oauthlib==1.2.0 # 인증 관련 최신 라이브러리
+google-auth-httplib2==0.2.0 # 인증 관련 최신 라이브러리
+openai==1.16.2 # 최신 버전으로 업데이트
 pytrends==4.9.2
-elevenlabs==0.2.12
+elevenlabs==1.0.0 # 최신 버전으로 업데이트 (API 변경 가능성 확인 필요)
 requests==2.31.0
-ffmpeg-python==0.2.0
-Pillow==10.1.0
-numpy==1.26.3
-tqdm==4.66.1
+ffmpeg-python==0.2.0 # MoviePy가 내부적으로 ffmpeg 사용, 직접 호출 불필요 시 제거 가능
+Pillow==10.3.0 # 최신 버전
+numpy==1.26.4 # 최신 버전
+tqdm==4.66.2 # 최신 버전
+google-auth>=2.28.0 # google-auth-oauthlib의 의존성
