--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-python-dotenv==1.0.1 # 버전 명시성 향상
-moviepy==1.0.3 # 안정 버전 사용 고려 (dev 버전 대신)
-google-api-python-client==2.126.0 # 최신 버전으로 업데이트
-google-auth-oauthlib==1.2.0 # 인증 관련 최신 라이브러리
-google-auth-httplib2==0.2.0 # 인증 관련 최신 라이브러리
-openai==1.16.2 # 최신 버전으로 업데이트
+python-dotenv==1.0.1
+moviepy==1.0.3
+google-api-python-client==2.126.0
+google-auth-oauthlib==1.2.0
+google-auth-httplib2==0.2.0
+openai==1.16.2
 pytrends==4.9.2
-elevenlabs==1.0.0 # 최신 버전으로 업데이트 (API 변경 가능성 확인 필요)
+elevenlabs==1.0.0
 requests==2.31.0
-ffmpeg-python==0.2.0 # MoviePy가 내부적으로 ffmpeg 사용, 직접 호출 불필요 시 제거 가능
-Pillow==10.3.0 # 최신 버전
-numpy==1.26.4 # 최신 버전
-tqdm==4.66.2 # 최신 버전
-google-auth>=2.28.0 # google-auth-oauthlib의 의존성
+ffmpeg-python==0.2.0
+Pillow==10.3.0
+numpy==1.26.4
+tqdm==4.66.2
+google-auth>=2.28.0
+pydantic<2 # Pydantic 버전을 1.x대로 제한하여 elevenlabs 호환성 문제 해결
