--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,11 @@ google-auth-oauthlib==1.2.0
 google-auth-httplib2==0.2.0
 openai==1.16.2
 pytrends==4.9.2
-elevenlabs==1.0.0
+elevenlabs==0.2.12 # *** 원래 버전으로 변경 ***
 requests==2.31.0
 ffmpeg-python==0.2.0
 Pillow==10.3.0
 numpy==1.26.4
 tqdm==4.66.2
 google-auth>=2.28.0
-pydantic<2 # Pydantic 버전을 1.x대로 제한하여 elevenlabs 호환성 문제 해결
+# pydantic 제약 조건 제거 (elevenlabs 0.2.12는 의존성 덜 민감)
