--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -2,7 +2,7 @@ name: YouTube Automation Pipeline (Cost Optimized)
 
 on:
   schedule:
-    # *** 비용 최소화를 위해 하루 1회 실행 (예: UTC 0시 = KST 오전 9시) ***
+    # 하루 1회 실행 (UTC 0시 = KST 오전 9시)
     - cron: '0 0 * * *'
   workflow_dispatch: # 수동 실행 가능
 
@@ -24,7 +24,6 @@ jobs:
           sudo apt-get install -y ffmpeg fonts-dejavu
 
       - name: Install Python dependencies
-        # 캐싱 추가하여 빌드 시간 단축 (비용 절감에 약간 도움)
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
@@ -37,14 +36,21 @@ jobs:
 
       - name: Run YouTube Automation Script
         env:
-          # GitHub Secrets 설정은 이전 답변과 동일하게 필요
-          GOOGLE_CLIENT_SECRET_JSON: ${{ secrets.GOOGLE_CLIENT_SECRET_JSON }}
+          # *** GitHub Secret 이름과 변수 이름 일치 ***
+          YOUTUBE_CLIENT_SECRETS_JSON: ${{ secrets.YOUTUBE_CLIENT_SECRETS_JSON }}
+          # GOOGLE_TOKEN_JSON Secret도 필요시 설정 (이전 답변 참고)
           GOOGLE_TOKEN_JSON: ${{ secrets.GOOGLE_TOKEN_JSON }}
-          ELEVENLABS_API_KEY: ${{ secrets.ELEVENLABS_API_KEY }}
+          ELEVENLABS_API_KEY: ${{ secrets.ELEVENLABS_KEY }} # Secret 이름 확인 필요 (ELEVENLABS_KEY 인지 확인)
           ELEVENLABS_VOICE_ID: ${{ secrets.ELEVENLABS_VOICE_ID }}
           OPENAI_API_KEY_1: ${{ secrets.OPENAI_API_KEY_1 }}
           OPENAI_API_KEY_2: ${{ secrets.OPENAI_API_KEY_2 }}
-          # ... 필요한 OpenAI 키 Secret 추가 ...
+          OPENAI_API_KEY_3: ${{ secrets.OPENAI_API_KEY_3 }}
+          OPENAI_API_KEY_4: ${{ secrets.OPENAI_API_KEY_4 }}
+          OPENAI_API_KEY_5: ${{ secrets.OPENAI_API_KEY_5 }}
+          OPENAI_API_KEY_6: ${{ secrets.OPENAI_API_KEY_6 }}
+          OPENAI_API_KEY_7: ${{ secrets.OPENAI_API_KEY_7 }}
+          OPENAI_API_KEY_8: ${{ secrets.OPENAI_API_KEY_8 }}
+          OPENAI_API_KEY_9: ${{ secrets.OPENAI_API_KEY_9 }}
           OPENAI_API_KEY_10: ${{ secrets.OPENAI_API_KEY_10 }}
           # TREND_KEYWORDS: ${{ secrets.TREND_KEYWORDS }} # 필요 시
 
