--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -24,23 +24,15 @@ jobs:
           sudo apt-get install -y ffmpeg fonts-dejavu
 
       - name: Install Python dependencies
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Run YouTube Automation Script
         env:
-          # *** GitHub Secret 이름과 변수 이름 일치 ***
           YOUTUBE_CLIENT_SECRETS_JSON: ${{ secrets.YOUTUBE_CLIENT_SECRETS_JSON }}
-          # GOOGLE_TOKEN_JSON Secret도 필요시 설정 (이전 답변 참고)
           GOOGLE_TOKEN_JSON: ${{ secrets.GOOGLE_TOKEN_JSON }}
-          ELEVENLABS_API_KEY: ${{ secrets.ELEVENLABS_KEY }} # Secret 이름 확인 필요 (ELEVENLABS_KEY 인지 확인)
+          ELEVENLABS_API_KEY: ${{ secrets.ELEVENLABS_KEY }}
           ELEVENLABS_VOICE_ID: ${{ secrets.ELEVENLABS_VOICE_ID }}
           OPENAI_API_KEY_1: ${{ secrets.OPENAI_API_KEY_1 }}
           OPENAI_API_KEY_2: ${{ secrets.OPENAI_API_KEY_2 }}
@@ -52,8 +44,6 @@ jobs:
           OPENAI_API_KEY_8: ${{ secrets.OPENAI_API_KEY_8 }}
           OPENAI_API_KEY_9: ${{ secrets.OPENAI_API_KEY_9 }}
           OPENAI_API_KEY_10: ${{ secrets.OPENAI_API_KEY_10 }}
-          # TREND_KEYWORDS: ${{ secrets.TREND_KEYWORDS }} # 필요 시
-
         run: python secure_main.py
 
       - name: Upload logs on failure (optional)
