--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -2,38 +2,40 @@ name: YouTube Automation Pipeline (Cost Optimized)
 
 on:
   schedule:
-    # 하루 1회 실행 (UTC 0시 = KST 오전 9시)
-    - cron: '0 0 * * *'
+    - cron: '0 0 * * *' # 하루 1회 실행 (UTC 0시)
   workflow_dispatch: # 수동 실행 가능
 
 jobs:
   build-and-upload:
     runs-on: ubuntu-latest
+
     steps:
+      # 1. 저장소 체크아웃
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 2. Python 설치
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
-      - name: Install system dependencies (ffmpeg, fonts)
+      # 3. 의존성 설치
+      - name: Install dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y ffmpeg fonts-dejavu
-
-      - name: Install Python dependencies
-        run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      # 4. 스크립트 실행
       - name: Run YouTube Automation Script
-        env:
-          YOUTUBE_CLIENT_SECRETS_JSON: ${{ secrets.YOUTUBE_CLIENT_SECRETS_JSON }}
-          GOOGLE_TOKEN_JSON: ${{ secrets.GOOGLE_TOKEN_JSON }}
-          ELEVENLABS_API_KEY: ${{ secrets.ELEVENLABS_KEY }}
+        env:  # GitHub Secrets를 환경 변수로 전달
+          ELEVENLABS_KEY: ${{ secrets.ELEVENLABS_KEY }}
           ELEVENLABS_VOICE_ID: ${{ secrets.ELEVENLABS_VOICE_ID }}
+          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+          GOOGLE_REFRESH_TOKEN: ${{ secrets.GOOGLE_REFRESH_TOKEN }}
           OPENAI_API_KEY_1: ${{ secrets.OPENAI_API_KEY_1 }}
           OPENAI_API_KEY_2: ${{ secrets.OPENAI_API_KEY_2 }}
           OPENAI_API_KEY_3: ${{ secrets.OPENAI_API_KEY_3 }}
@@ -44,9 +46,11 @@ jobs:
           OPENAI_API_KEY_8: ${{ secrets.OPENAI_API_KEY_8 }}
           OPENAI_API_KEY_9: ${{ secrets.OPENAI_API_KEY_9 }}
           OPENAI_API_KEY_10: ${{ secrets.OPENAI_API_KEY_10 }}
+          YOUTUBE_CLIENT_SECRETS_JSON: ${{ secrets.YOUTUBE_CLIENT_SECRETS_JSON }}
         run: python secure_main.py
 
-      - name: Upload logs on failure (optional)
+      # 5. 오류 로그 업로드
+      - name: Upload logs on failure
         if: failure()
         uses: actions/upload-artifact@v4
         with:
