--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -1,57 +1,55 @@
-name: YouTube Automation Pipeline (Cost Optimized)
+name: YouTube Automation Pipeline
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # UTC 0시 (KST 오전 9시)
+    - cron: '0 0 * * *'  # Daily at 00:00 UTC
   workflow_dispatch:
 
 jobs:
-  build-and-upload:
+  automation:
     runs-on: ubuntu-latest
     timeout-minutes: 30
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
 
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y ffmpeg fonts-dejavu
+    - name: Install dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y ffmpeg fonts-dejavu
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+    - name: Run Main Script
+      env:
+        YOUTUBE_CLIENT_SECRETS_JSON: ${{ secrets.YOUTUBE_CLIENT_SECRETS_JSON }}
+        GOOGLE_TOKEN_JSON: ${{ secrets.GOOGLE_TOKEN_JSON }}
+        ELEVENLABS_KEY: ${{ secrets.ELEVENLABS_KEY }}
+        ELEVENLABS_VOICE_ID: ${{ secrets.ELEVENLABS_VOICE_ID }}
+        OPENAI_API_KEY_1: ${{ secrets.OPENAI_API_KEY_1 }}
+        OPENAI_API_KEY_2: ${{ secrets.OPENAI_API_KEY_2 }}
+        OPENAI_API_KEY_3: ${{ secrets.OPENAI_API_KEY_3 }}
+        OPENAI_API_KEY_4: ${{ secrets.OPENAI_API_KEY_4 }}
+        OPENAI_API_KEY_5: ${{ secrets.OPENAI_API_KEY_5 }}
+        OPENAI_API_KEY_6: ${{ secrets.OPENAI_API_KEY_6 }}
+        OPENAI_API_KEY_7: ${{ secrets.OPENAI_API_KEY_7 }}
+        OPENAI_API_KEY_8: ${{ secrets.OPENAI_API_KEY_8 }}
+        OPENAI_API_KEY_9: ${{ secrets.OPENAI_API_KEY_9 }}
+        OPENAI_API_KEY_10: ${{ secrets.OPENAI_API_KEY_10 }}
+      run: python secure_main.py
 
-      - name: Run Automation Script
-        env:
-          YOUTUBE_CLIENT_SECRETS_JSON: ${{ secrets.YOUTUBE_CLIENT_SECRETS_JSON }}
-          GOOGLE_TOKEN_JSON: ${{ secrets.GOOGLE_TOKEN_JSON }}
-          ELEVENLABS_API_KEY: ${{ secrets.ELEVENLABS_KEY }}
-          ELEVENLABS_VOICE_ID: ${{ secrets.ELEVENLABS_VOICE_ID }}
-          OPENAI_API_KEY_1: ${{ secrets.OPENAI_API_KEY_1 }}
-          OPENAI_API_KEY_2: ${{ secrets.OPENAI_API_KEY_2 }}
-          OPENAI_API_KEY_3: ${{ secrets.OPENAI_API_KEY_3 }}
-          OPENAI_API_KEY_4: ${{ secrets.OPENAI_API_KEY_4 }}
-          OPENAI_API_KEY_5: ${{ secrets.OPENAI_API_KEY_5 }}
-          OPENAI_API_KEY_6: ${{ secrets.OPENAI_API_KEY_6 }}
-          OPENAI_API_KEY_7: ${{ secrets.OPENAI_API_KEY_7 }}
-          OPENAI_API_KEY_8: ${{ secrets.OPENAI_API_KEY_8 }}
-          OPENAI_API_KEY_9: ${{ secrets.OPENAI_API_KEY_9 }}
-          OPENAI_API_KEY_10: ${{ secrets.OPENAI_API_KEY_10 }}
-        run: python secure_main.py
-
-      - name: Upload logs on failure
-        if: failure()
-        uses: actions/upload-artifact@v4
-        with:
-          name: failure-logs
-          path: |
-            secure_log.txt
-            *.log
+    - name: Upload Logs
+      if: always()
+      uses: actions/upload-artifact@v3
+      with:
+        name: logs
+        path: |
+          secure_log.txt
+          *.log
 
