--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -1,14 +1,14 @@
-name: YouTube Automation Pipeline
+name: YouTube AutoBot
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Daily at 00:00 UTC
+    - cron: '0 0,12 * * *'  # 하루 2회 실행 (00:00, 12:00 UTC)
   workflow_dispatch:
 
 jobs:
-  automation:
+  build:
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    timeout-minutes: 45
 
     steps:
     - name: Checkout code
@@ -19,19 +19,23 @@ jobs:
       with:
         python-version: '3.10'
 
-    - name: Install dependencies
+    - name: Install system dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y ffmpeg fonts-dejavu
+        sudo apt-get install -y ffmpeg imagemagick fonts-dejavu
+
+    - name: Install Python packages
+      run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
     - name: Run Main Script
       env:
-        YOUTUBE_CLIENT_SECRETS_JSON: ${{ secrets.YOUTUBE_CLIENT_SECRETS_JSON }}
-        GOOGLE_TOKEN_JSON: ${{ secrets.GOOGLE_TOKEN_JSON }}
         ELEVENLABS_KEY: ${{ secrets.ELEVENLABS_KEY }}
         ELEVENLABS_VOICE_ID: ${{ secrets.ELEVENLABS_VOICE_ID }}
+        GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+        GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+        GOOGLE_REFRESH_TOKEN: ${{ secrets.GOOGLE_REFRESH_TOKEN }}
         OPENAI_API_KEY_1: ${{ secrets.OPENAI_API_KEY_1 }}
         OPENAI_API_KEY_2: ${{ secrets.OPENAI_API_KEY_2 }}
         OPENAI_API_KEY_3: ${{ secrets.OPENAI_API_KEY_3 }}
@@ -42,14 +46,15 @@ jobs:
         OPENAI_API_KEY_8: ${{ secrets.OPENAI_API_KEY_8 }}
         OPENAI_API_KEY_9: ${{ secrets.OPENAI_API_KEY_9 }}
         OPENAI_API_KEY_10: ${{ secrets.OPENAI_API_KEY_10 }}
-      run: python secure_main.py
+      run: |
+        python secure_main.py --auto
 
-    - name: Upload Logs
+    - name: Upload Artifacts
       if: always()
       uses: actions/upload-artifact@v3
       with:
-        name: logs
+        name: output
         path: |
-          secure_log.txt
-          *.log
+          static/videos/*.mp4
+          static/thumbnails/*.jpg
 
