--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pytrends>=4.9.2
 openai>=1.3.0
-elevenlabs>=0.2.12
+elevenlabs==0.2.12
 google-api-python-client>=2.85.0
 moviepy>=1.0.3
 Pillow>=9.5.0
