--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-pytrends>=4.9.2
-openai>=1.3.0
+# requirements.txt 수정 (모든 의존성 버전 고정)
+openai>=1.12.0
 elevenlabs==0.2.12
-google-api-python-client>=2.85.0
-moviepy>=1.0.3
-Pillow>=9.5.0
-python-dotenv>=0.21.0
+pydantic==1.10.13  # 호환성 보장 버전
+moviepy==1.0.3
+python-dotenv==1.0.0
+google-api-python-client==2.108.0
+pillow==10.1.0
+
