--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-# requirements.txt 수정 (모든 의존성 버전 고정)
+# 필수 라이브러리 버전 고정 (2025년 기준)
 openai>=1.12.0
 elevenlabs==0.2.12
-pydantic==1.10.13  # 호환성 보장 버전
+pydantic==1.10.13
 moviepy==1.0.3
 python-dotenv==1.0.0
 google-api-python-client==2.108.0
 pillow==10.1.0
+ffmpeg-python==0.2.0
 
